<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoaViagem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    
    <string name="erro_autenticacao">Usuário ou senha inválidos</string>
    
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    
	<string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo de Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="dataChegada">Data da Chegada</string>
    <string name="dataSaida">Data da Saída</string>
    <string name="orcamento">Orçamento</string>
    <string name="selecione">Selecione</string>
    <string name="quantidade_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    
    <string name="local">Local</string>
    <string name="descricao">Descrição</string>
    <string name="gastei">Gastei</string>
    
    <string name="categoria">Categoria</string>    
    
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover</string>
    <string name="remover">Remover</string>
    
    <string name="editar">Editar</string>
    <string name="opcoes">Opções</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    
    <string name="confirmacao_exclusao_viagem">Confirmar Exclusão ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>    
    
    <string name="preferencias">Preferências</string>
    <string name="informe_valor_limite">Informe o valor limite</string>
    
    <string name="modo_viagem_sumario">Determina a viagem ativa com base na data atual</string>
    <string name="valor_limite_sumario">Notifica quando os gastos ultrapassarem o percentual informado</string>
    
    <string name="modo_viagem">Modo Viagem</string>
    <string name="valor_limite">Valor Limite</string>
    
    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

</resources>
