<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2" >

		<LinearLayout
			android:background="#015488"
		    android:orientation="vertical" >
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/nova_viagem"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textStyle="bold" />
		    
		</LinearLayout>
		
		<TextView android:text="@string/destino" />
		
		<EditText 
		    android:id="@+id/destino"
		    android:inputType="text" />
		
		<TextView android:text="@string/tipo_da_viagem" />
		
		<RadioGroup 
		    android:id="@+id/tipoViagem"
		    android:orientation="horizontal" >
		    
		    <RadioButton
		        android:id="@+id/lazer"
		        android:checked="true"
		        android:text="@string/lazer" />
		    
		    <RadioButton
		        android:id="@+id/negocios"
		        android:layout_marginLeft="30dp"
		        android:text="@string/negocios" />
		    
		</RadioGroup>
		
		<TableRow>
		    
		    <TextView 
		        android:layout_gravity="center"
		        android:text="@string/dataChegada" />
		    
		    <TextView 
		        android:layout_gravity="center"
		        android:text="@string/dataSaida" />
		    
		</TableRow>
		
		<TableRow>
		    
		    <Button
		        android:id="@+id/dataChegada"
		        android:text="@string/selecione"
		        android:onClick="selecionarData" />
		    
		    <Button
		        android:id="@+id/dataSaida"
		        android:text="@string/selecione"
		        android:onClick="selecionarData" />
		    
		</TableRow>
		
		<TextView android:text="@string/orcamento"/>
		
		<EditText
		    android:id="@+id/orcamento"
		    android:inputType="numberDecimal" />
		
		<TableRow>
		    
		    <TextView android:text="@string/quantidade_pessoas" />
		    
		    <EditText
		        android:id="@+id/quantidade_pessoas"
		        android:inputType="number" />
		    
		</TableRow>
		
		<Button
		    android:onClick="salvarViagem"
		    android:text="@string/salvar" />

    </TableLayout>

</ScrollView>
